--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 
 <html>
-  <a href="GitCheatSheet.html"> project 1 </a>
+  <a href="HW2/GitCheatSheet.html"> project 1 </a>
 </html>
