--- a/gitSheet/gitSheet.html
+++ b/gitSheet/gitSheet.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Alice" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script%20Alice" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css">
     <title>git cheat sheet</title>
   </head>
@@ -11,7 +11,7 @@
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Git-logo.svg/2000px-Git-logo.svg.png"
            alt="git"
            height=50
-           align="bottom">
+           >
       Philip's git Cheat Sheet
     </h1>
     <h2>
@@ -32,7 +32,7 @@
           <td>clone</td>
           <td>Clone a repository into a new directory</td>
           <td>&nbsp;</td>
-          <td><pre>git clone "URL"</pre></td>
+          <td><code>git clone "URL"</code></td>
         </tr>
         <tr>
           <td>add</td>
@@ -42,19 +42,19 @@
             -u Update: only files currently tracked <br/>
             -A All: all files in the project
           </td>
-          <td><pre>git add file.html</pre></td>
+          <td><code>git add file.html</code></td>
         </tr>
         <tr>
           <td>commit</td>
           <td>Record staged changes to the repository</td>
           <td>-m &lt;msg&gt; Message: use the given &lt;msg&gt; as the commit message</td>
-          <td><pre>git commit -m"commit message"</pre></td>
+          <td><code>git commit -m"commit message"</code></td>
         </tr>
         <tr>
           <td>push</td>
           <td>Update remote repository with committed files</td>
           <td>origin &lt;branch name&gt;</td>
-          <td><pre>git push origin master</pre></td>
+          <td><code>git push origin master</code></td>
         </tr>
       </tbody>
     </table>
@@ -77,5 +77,5 @@
   x <td>
   x <a>
   x <img>
-  <style>
+  x <code>
 -->
