--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
-
-<html>
-  <a href="HW2/GitCheatSheet.html"> project 1 </a>
+<html lang="en">
+  <head>
+    <title>Web Dev Projects</title>
+  </head>
+  <body>
+    <h1>
+      <a href="gitSheet/gitSheet.html" > Git Cheat Sheet</a>
+    </h1>
+  </body>
 </html>
