--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     <h1>
       <a href="gitSheet/gitSheet.html" > Git Cheat Sheet</a>
+      <a href="HTML/index.html" > Git Cheat Sheet</a>
     </h1>
   </body>
 </html>
