added style to main page and updated the git chart

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <title>Web Dev Projects</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>
       <a href="gitSheet/gitSheet.html" > Git Cheat Sheet</a>
-      <a href="HTML/index.html" > Git Cheat Sheet</a>
+      <a href="grandmasBlog/home.html" > Grandma's Blog</a>
     </h1>
   </body>
 </html>
